fix: resolve Java 9+ deprecation warnings in autopatchbase